@@ -37,6 +37,7 @@ Merged from 2.1:
  * Do not consider local node a valid source during replace (CASSANDRA-11848)
  * Add message dropped tasks to nodetool netstats (CASSANDRA-11855)
  * Avoid holding SSTableReaders for duration of incremental repair (CASSANDRA-11739)
+ * Prevent select statements with clustering key > 64k (CASSANDRA-11882)
 
 
 3.6
